--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "private": true,
   "dependencies": {
     "axios": "^0.20.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
+    "jest": "^26.5.3",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "1.1.5",
+    "react-test-renderer": "^16.14.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
   },
